--- a/src/components/container.astro
+++ b/src/components/container.astro
@@ -1,5 +1,7 @@
 ---
 const { class: className } = Astro.props;
+
+import "@components/css-components/style-header.css";
 ---
 
 <div class:list={["max-w-screen-xl mx-auto px-5", className]}>
