--- a/src/pages/areas/culver-city.astro
+++ b/src/pages/areas/culver-city.astro
@@ -5,83 +5,116 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
+import Navbar from "@components/navbar/navbar.astro";
 ---
- <Layout title="Same Day Appliance Repair Culver City">
-      <Container>
-<div class="content">
-<div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
-    Culver City
 
-    <h1>Same Day Appliance Repair Culver City </h1>
-    <h2>Welcome to Same Day Appliance Repair in Culver City</h2>
-    <p> For Reliable Appliance Repair in Culver City, You've Found the Right Team.</p>
-    <p>When it comes to your home appliances, Same Day Appliance Repair has the expertise to handle them all. With our extensive experience and knowledge, Culver City residents can trust us to tackle a wide range of appliance issues, from refrigerators to stoves and washers. Whether it's a simple switch replacement or a comprehensive compressor overhaul, our professional, certified, and fully insured technicians are committed to restoring your appliances to their optimal working condition. We are proficient in servicing all major appliance brands, including high-end names like Miele, Sub-Zero, Viking, Dacor, and Thermador.</p>
-    <h2>Swift and Efficient Appliance Repair Services in Culver City</h2>
-    <p>We understand the urgency of appliance issues. At Same Day Appliance Repair, we prioritize arriving on the same day you call. With our well-equipped mobile units, we swiftly diagnose problems and replace malfunctioning parts, ensuring you don't have to endure another day without your essential appliances. Our technicians carry only genuine factory parts, guaranteeing swift and effective on-site repairs.</p>
-    <h2>Respectful and Convenient Appliance Repair Services in Culver City</h2>
-    <p>Your time is valuable, and we respect that. Our technicians prioritize punctuality and will give you a courtesy call 15-20 minutes before their arrival. We never impose additional charges for emergency services or weekend repairs. Our initial assessment helps our technicians complete the repair in a single visit. Providing your appliance's model and serial number expedites the process, ensuring we have the necessary parts to promptly resolve the issue.<p>
-    <h2>Quality Assured Appliance Repair in Culver City | 3 month to one year Warranty</h2>
-    <p>We take pride in our work and offer an extended 3 month to one year warranty on all replacement parts and labor. With our commitment to using only genuine factory parts, we consistently deliver reliable and long-lasting repairs.</p>
-    <h2>Professional and Friendly Appliance Repair Technicians in Culver City</h2>
-    <p>Our technicians are not only highly skilled professionals but also courteous and friendly. They undergo continuous training to stay updated on the latest technical innovations and products, providing you with valuable tips to extend your appliance's lifespan. They ensure to leave your home clean and mess-free after completing the repair.</p>
-    <h2>Affordable Appliance Repair Services in Culver City | Schedule Your Repair Today</h2>
-    <p>While we offer competitive pricing, we never compromise on the superior quality of our repair services. Contact us immediately at <a style="color:#000000; font-size: 20px; font-weight:900;" title="Call Pasadena Appliance Repair" href="tel:3235405890">+1 323 540 58 90</a> when you notice any irregularities with your appliances. Timely repairs can save you from incurring additional expenses down the line.</p>
-    <h2>Your Trusted Choice for Appliance Repair in Culver City</h2>
-    
-   <p> &bull; Professional and Reliable Service</br >
-    &bull; Extensive Experience with All Major Types and Brands of Appliances</br >
-    &bull; Fully Insured, Certified, and Licensed Technicians</br >
-    &bull; Same-Day Service</br >
-    &bull; Detailed Written Estimates</br >
-    &bull; Exclusive Use of Genuine Factory Parts</p>
-    <h2>Appliances We Repair:</h2>
-    <p>&bull; Refrigerators</br >
-    &bull; Freezers</br >
-    &bull; Ice Makers and Ice Machines</br >
-    &bull; Ovens</br >
-    &bull; Ranges</br >
-    &bull; Cook-Tops</br >
-    &bull; Dishwashers</br >
-    &bull; Washers</br >
-    &bull; Dryers</br >
-    &bull; Microwaves</br >
-    &bull; Garbage Disposals</br >
-    &bull; Wine Coolers</br >
-    &bull; BBQs</br >
-    &bull; and more!</br ></p>
-    <h2>Appliance Brands We Repair:</h2>
-    <p>&bull; Admiral</br >
-    &bull; Amana</br >
-    &bull; Black & Decker</br >
-    &bull; Bosch</br >
-    &bull; Dacor</br >
-    &bull; Electrolux</br >
-    &bull; Fisher & Paykel</br >
-    &bull; Frigidaire</br >
-    &bull; Gaffers And Sattler</br >
-    &bull; General Electric/GE</br >
-    &bull; Jenn-Air</br >
-    &bull; Kenmore</br >
-    &bull; KitchenAid</br >
-    &bull; LG</br >
-    &bull; Maytag</br >
-    &bull; Miele</br >
-    &bull; Montgomery Ward</br >
-    &bull; O’Keefe & Merritt</br >
-    &bull; Samsung</br >
-    &bull; Sears</br >
-    &bull; Speed Queen</br >
-    &bull; Sub-Zero</br >
-    &bull; Tappan</br >
-    &bull; Thermador</br >
-    &bull; Traulsen</br >
-    &bull; Viking</br >
-    &bull; Westinghouse</br >
-    &bull; Whirlpool</br >
-    &bull; Wolf</br >
-    &bull; And Others!</br ></p>
-    <div>
+<Navbar />
+<Layout title="Same Day Appliance Repair Culver City">
+  <Container>
+    <div class="content">
+      <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
+        Culver City
+
+        <h1>Same Day Appliance Repair Culver City</h1>
+        <h2>Welcome to Same Day Appliance Repair in Culver City</h2>
+        <p>
+          For Reliable Appliance Repair in Culver City, You've Found the Right
+          Team.
+        </p>
+        <p>
+          When it comes to your home appliances, Same Day Appliance Repair has
+          the expertise to handle them all. With our extensive experience and
+          knowledge, Culver City residents can trust us to tackle a wide range
+          of appliance issues, from refrigerators to stoves and washers. Whether
+          it's a simple switch replacement or a comprehensive compressor
+          overhaul, our professional, certified, and fully insured technicians
+          are committed to restoring your appliances to their optimal working
+          condition. We are proficient in servicing all major appliance brands,
+          including high-end names like Miele, Sub-Zero, Viking, Dacor, and
+          Thermador.
+        </p>
+        <h2>Swift and Efficient Appliance Repair Services in Culver City</h2>
+        <p>
+          We understand the urgency of appliance issues. At Same Day Appliance
+          Repair, we prioritize arriving on the same day you call. With our
+          well-equipped mobile units, we swiftly diagnose problems and replace
+          malfunctioning parts, ensuring you don't have to endure another day
+          without your essential appliances. Our technicians carry only genuine
+          factory parts, guaranteeing swift and effective on-site repairs.
+        </p>
+        <h2>
+          Respectful and Convenient Appliance Repair Services in Culver City
+        </h2>
+        <p>
+          Your time is valuable, and we respect that. Our technicians prioritize
+          punctuality and will give you a courtesy call 15-20 minutes before
+          their arrival. We never impose additional charges for emergency
+          services or weekend repairs. Our initial assessment helps our
+          technicians complete the repair in a single visit. Providing your
+          appliance's model and serial number expedites the process, ensuring we
+          have the necessary parts to promptly resolve the issue.<p>
+            <h2>
+              Quality Assured Appliance Repair in Culver City | 3 month to one
+              year Warranty
+            </h2>
+            <p>
+              We take pride in our work and offer an extended 3 month to one
+              year warranty on all replacement parts and labor. With our
+              commitment to using only genuine factory parts, we consistently
+              deliver reliable and long-lasting repairs.
+            </p>
+            <h2>
+              Professional and Friendly Appliance Repair Technicians in Culver
+              City
+            </h2>
+            <p>
+              Our technicians are not only highly skilled professionals but also
+              courteous and friendly. They undergo continuous training to stay
+              updated on the latest technical innovations and products,
+              providing you with valuable tips to extend your appliance's
+              lifespan. They ensure to leave your home clean and mess-free after
+              completing the repair.
+            </p>
+            <h2>
+              Affordable Appliance Repair Services in Culver City | Schedule
+              Your Repair Today
+            </h2>
+            <p>
+              While we offer competitive pricing, we never compromise on the
+              superior quality of our repair services. Contact us immediately at <a
+                style="color:#000000; font-size: 20px; font-weight:900;"
+                title="Call Pasadena Appliance Repair"
+                href="tel:3235405890">+1 323 540 58 90</a
+              > when you notice any irregularities with your appliances. Timely repairs
+              can save you from incurring additional expenses down the line.
+            </p>
+            <h2>Your Trusted Choice for Appliance Repair in Culver City</h2>
+
+            <p>&bull; Professional and Reliable Service</p>
+            &bull; Extensive Experience with All Major Types and Brands of Appliances
+          </p>
+          &bull; Fully Insured, Certified, and Licensed Technicians
+        </p>
+        &bull; Same-Day Service
+      </div>
+      &bull; Detailed Written Estimates
     </div>
-    <Cta />
-</Container>
-</Layout>
+    &bull; Exclusive Use of Genuine Factory Parts</Container
+  >
+  <h2>Appliances We Repair:</h2>
+  <p>&bull; Refrigerators</p>
+  &bull; Freezers</Layout
+>
+&bull; Ice Makers and Ice Machines &bull; Ovens &bull; Ranges &bull; Cook-Tops &bull;
+Dishwashers &bull; Washers &bull; Dryers &bull; Microwaves &bull; Garbage Disposals
+&bull; Wine Coolers &bull; BBQs &bull; and more!
+<h2>Appliance Brands We Repair:</h2>
+<p>&bull; Admiral</p>
+&bull; Amana &bull; Black & Decker &bull; Bosch &bull; Dacor &bull; Electrolux &bull;
+Fisher & Paykel &bull; Frigidaire &bull; Gaffers And Sattler &bull; General Electric/GE
+&bull; Jenn-Air &bull; Kenmore &bull; KitchenAid &bull; LG &bull; Maytag &bull; Miele
+&bull; Montgomery Ward &bull; O’Keefe & Merritt &bull; Samsung &bull; Sears &bull;
+Speed Queen &bull; Sub-Zero &bull; Tappan &bull; Thermador &bull; Traulsen &bull;
+Viking &bull; Westinghouse &bull; Whirlpool &bull; Wolf &bull; And Others!
+<div></div>
+<Cta />
