--- a/src/pages/areas/los-angeles-and-surrounding-areas.astro
+++ b/src/pages/areas/los-angeles-and-surrounding-areas.astro
@@ -6,7 +6,9 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
+import Navbar from "@components/navbar/navbar.astro";
 ---
+<Navbar />
  <Layout title="Same Day Appliance Repair Los Angeles: (424) 325-0520">
       <Container>
  <main>
