--- a/src/pages/areas/los-feliz.astro
+++ b/src/pages/areas/los-feliz.astro
@@ -5,87 +5,118 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
+import Navbar from "@components/navbar/navbar.astro";
 ---
- <Layout title="Same Day Appliance Repair Los Feliz: (424) 325-0520">
-      <Container>
-<div class="content">
-    <h1><span class="animate-charcter">Same Day</span> Appliance Repair Los Feliz</h1>
-                <img style="border-radius: 25px;" class="responsiveimg" width="500" height="500" alt="Same Day APpliance Repair Los Feliz - technician repairing an appliance" src="/images/same-day-appliance-repair-los-feliz.webp">
-                <caption>Same Day Appliance Repair Los Feliz</caption>
-                <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
-                    <h2>Trusted Appliance Repair Services in Los Feliz, CA</h2>
-                    <p>When it comes to your home appliances, Same Day Appliance Repair is your go-to expert. Our skilled team combines extensive experience and knowledge to cater to your appliance needs in Los Feliz. Residents in Los Feliz trust us to handle a wide array of issues, from simple switch replacements to intricate compressor installations for various appliances such as refrigerators, stoves, and washers. We are well-versed in servicing all major appliance brands, including premium ones like Sub-Zero, Viking, Dacor, and Thermador.</p>
-                    <h2>Committed to Timely Solutions</h2>
-                    <p>At Same Day Appliance Repair, we prioritize your convenience. Our quick and efficient service ensures we arrive on the same day you contact us. Equipped with fully stocked mobile units, our technicians perform on-the-spot diagnostics and quick replacements, minimizing any disruption to your daily routine. We value your time and accommodate your scheduling preferences, providing timely appointments and courtesy calls before our arrival. We also offer emergency and weekend services without any additional charges.</p>
-                    <h2>Quality Service and Warranty Assurance</h2>
-                    <p>Our commitment to excellence is reflected in our use of genuine factory parts, backed by a 1 -year warranty on all replacements. We maintain confidence in our highly professional and experienced technicians, who stay updated with the latest innovations and are always ready to provide valuable tips to extend your appliance's lifespan. Their polite, friendly, and professional demeanor ensures a seamless and mess-free repair experience in your home.</p>
-                    <h2>Superior Quality at Affordable Rates</h2>
-                    <p>We take pride in delivering superior repair services at reasonable and competitive rates. New customers can benefit from attractive discounts, highlighting our commitment to affordability without compromising on the quality of our service.</p>
-                    <p>Don't wait until a minor appliance issue turns into a major problem. Contact us at <a style="color:#000000; font-size: 20px; font-weight:900;" title="Call Pasadena Appliance Repair" href="tel:3235405890">Call: +1 323 540 58 90</a>the moment you notice any irregularities. Timely repairs can save you from additional costs and prevent any potential risks to your home and health.</p>
-                    <h2>Why Choose Us for Appliance Repair in Los Feliz, CA:</h2>
-    
-                 <p>   &bull; Professional and Reliable Service</br >
-                    &bull; </br >
-                    &bull; Extensive Experience in Repairing All Major Types and Brands of Appliances</br >
-                    &bull; </br >
-                    &bull; Fully Insured, Certified, and Licensed Technicians</br >
-                    &bull; </br >
-                    &bull; Same-Day Service</br >
-                    &bull; </br >
-                    &bull; Detailed Written Estimates</br >
-                    &bull; </br >
-                    &bull; Genuine Factory Parts</br >
-                    &bull; </br >
-                    &bull; Up to 1-Year Warranty</br ></p>
-                    <h2>Appliances We Repair:</h2>
-                    <p>&bull; Refrigerators</br >
-                    &bull; Freezers</br >
-                    &bull; Ice Makers and Ice Machines</br >
-                    &bull; Ovens</br >
-                    &bull; Ranges</br >
-                    &bull; Cook-Tops</br >
-                    &bull; Dishwashers</br >
-                    &bull; Washers</br >
-                    &bull; Dryers</br >
-                    &bull; Microwaves</br >
-                    &bull; Garbage Disposals</br >
-                    &bull; Wine Coolers</br >
-                    &bull; BBQs</br >
-                    &bull; and more!</br ></p>
-                    <h2>Appliance Brands We Repair:</h2>
-                    <p>&bull; Admiral</br >
-                    &bull; Amana</br >
-                    &bull; Black & Decker</br >
-                    &bull; Bosch</br >
-                    &bull; Dacor</br >
-                    &bull; Electrolux</br >
-                    &bull; Fisher & Paykel</br >
-                    &bull; Frigidaire</br >
-                    &bull; Gaffers And Sattler</br >
-                    &bull; General Electric/GE</br >
-                    &bull; Jenn-Air</br >
-                    &bull; Kenmore</br >
-                    &bull; KitchenAid</br >
-                    &bull; LG</br >
-                    &bull; Maytag</br >
-                    &bull; Miele</br >
-                    &bull; Montgomery Ward</br >
-                    &bull; O’Keefe & Merritt</br >
-                    &bull; Samsung</br >
-                    &bull; Sears</br >
-                    &bull; Speed Queen</br >
-                    &bull; Sub-Zero</br >
-                    &bull; Tappan</br >
-                    &bull; Thermador</br >
-                    &bull; Traulsen</br >
-                    &bull; Viking</br >
-                    &bull; Westinghouse</br >
-                    &bull; Whirlpool</br >
-                    &bull; Wolf</br >
-                    &bull; and Others!</br ></p>
-                    <h2>We offer high-quality appliance repair services for Los Feliz residents.</h2>
-                    <p>You can contact us at <a style="color:#000000; font-size: 20px; font-weight:900;" title="Call Pasadena Appliance Repair" href="tel:3235405890">Call: +1 323 540 58 90</a> for any appliance problem you meet. We perform efficient and quality same day repairs for all major brands and types of home appliances.  You can entrust your refrigerator, washer, oven, stove, range or dishwasher with confidence.</p><p>  All our technicians are certified, licensed and fully insured, they also attend appliance repair training constantly and they are always aware of all the latest innovations in the market of home appliances. You can rely on our experience and professionalism in repairing your home appliances in Los Feliz, CA.</p>
- </div>
-    <Cta />
-</Container>
-</Layout>
+
+<Navbar />
+<Layout title="Same Day Appliance Repair Los Feliz: (424) 325-0520">
+  <Container>
+    <div class="content">
+      <h1>
+        <span class="animate-charcter">Same Day</span> Appliance Repair Los Feliz
+      </h1>
+      <img
+        style="border-radius: 25px;"
+        class="responsiveimg"
+        width="500"
+        height="500"
+        alt="Same Day APpliance Repair Los Feliz - technician repairing an appliance"
+        src="/images/same-day-appliance-repair-los-feliz.webp"
+      />
+      <caption>Same Day Appliance Repair Los Feliz</caption>
+      <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
+        <h2>Trusted Appliance Repair Services in Los Feliz, CA</h2>
+        <p>
+          When it comes to your home appliances, Same Day Appliance Repair is
+          your go-to expert. Our skilled team combines extensive experience and
+          knowledge to cater to your appliance needs in Los Feliz. Residents in
+          Los Feliz trust us to handle a wide array of issues, from simple
+          switch replacements to intricate compressor installations for various
+          appliances such as refrigerators, stoves, and washers. We are
+          well-versed in servicing all major appliance brands, including premium
+          ones like Sub-Zero, Viking, Dacor, and Thermador.
+        </p>
+        <h2>Committed to Timely Solutions</h2>
+        <p>
+          At Same Day Appliance Repair, we prioritize your convenience. Our
+          quick and efficient service ensures we arrive on the same day you
+          contact us. Equipped with fully stocked mobile units, our technicians
+          perform on-the-spot diagnostics and quick replacements, minimizing any
+          disruption to your daily routine. We value your time and accommodate
+          your scheduling preferences, providing timely appointments and
+          courtesy calls before our arrival. We also offer emergency and weekend
+          services without any additional charges.
+        </p>
+        <h2>Quality Service and Warranty Assurance</h2>
+        <p>
+          Our commitment to excellence is reflected in our use of genuine
+          factory parts, backed by a 1 -year warranty on all replacements. We
+          maintain confidence in our highly professional and experienced
+          technicians, who stay updated with the latest innovations and are
+          always ready to provide valuable tips to extend your appliance's
+          lifespan. Their polite, friendly, and professional demeanor ensures a
+          seamless and mess-free repair experience in your home.
+        </p>
+        <h2>Superior Quality at Affordable Rates</h2>
+        <p>
+          We take pride in delivering superior repair services at reasonable and
+          competitive rates. New customers can benefit from attractive
+          discounts, highlighting our commitment to affordability without
+          compromising on the quality of our service.
+        </p>
+        <p>
+          Don't wait until a minor appliance issue turns into a major problem.
+          Contact us at <a
+            style="color:#000000; font-size: 20px; font-weight:900;"
+            title="Call Pasadena Appliance Repair"
+            href="tel:3235405890">Call: +1 323 540 58 90</a
+          >the moment you notice any irregularities. Timely repairs can save you
+          from additional costs and prevent any potential risks to your home and
+          health.
+        </p>
+        <h2>Why Choose Us for Appliance Repair in Los Feliz, CA:</h2>
+
+        <p>&bull; Professional and Reliable Service</p>
+        &bull;
+      </div>
+      &bull; Extensive Experience in Repairing All Major Types and Brands of Appliances
+    </div>
+    &bull;
+  </Container>
+  &bull; Fully Insured, Certified, and Licensed Technicians</Layout
+>
+&bull; &bull; Same-Day Service &bull; &bull; Detailed Written Estimates &bull; &bull;
+Genuine Factory Parts &bull; &bull; Up to 1-Year Warranty
+<h2>Appliances We Repair:</h2>
+<p>&bull; Refrigerators</p>
+&bull; Freezers &bull; Ice Makers and Ice Machines &bull; Ovens &bull; Ranges &bull;
+Cook-Tops &bull; Dishwashers &bull; Washers &bull; Dryers &bull; Microwaves &bull;
+Garbage Disposals &bull; Wine Coolers &bull; BBQs &bull; and more!
+<h2>Appliance Brands We Repair:</h2>
+<p>&bull; Admiral</p>
+&bull; Amana &bull; Black & Decker &bull; Bosch &bull; Dacor &bull; Electrolux &bull;
+Fisher & Paykel &bull; Frigidaire &bull; Gaffers And Sattler &bull; General Electric/GE
+&bull; Jenn-Air &bull; Kenmore &bull; KitchenAid &bull; LG &bull; Maytag &bull; Miele
+&bull; Montgomery Ward &bull; O’Keefe & Merritt &bull; Samsung &bull; Sears &bull;
+Speed Queen &bull; Sub-Zero &bull; Tappan &bull; Thermador &bull; Traulsen &bull;
+Viking &bull; Westinghouse &bull; Whirlpool &bull; Wolf &bull; and Others!
+<h2>
+  We offer high-quality appliance repair services for Los Feliz residents.
+</h2>
+<p>
+  You can contact us at <a
+    style="color:#000000; font-size: 20px; font-weight:900;"
+    title="Call Pasadena Appliance Repair"
+    href="tel:3235405890">Call: +1 323 540 58 90</a
+  > for any appliance problem you meet. We perform efficient and quality same day
+  repairs for all major brands and types of home appliances. You can entrust your
+  refrigerator, washer, oven, stove, range or dishwasher with confidence.
+</p><p>
+  All our technicians are certified, licensed and fully insured, they also
+  attend appliance repair training constantly and they are always aware of all
+  the latest innovations in the market of home appliances. You can rely on our
+  experience and professionalism in repairing your home appliances in Los Feliz,
+  CA.
+</p>
+
+<Cta />
