--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -7,7 +7,9 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Cta from "@components/cta.astro";
+import Navbar from "@components/navbar/navbar.astro";
 ---
+<Navbar />
 <Layout title="Same Day Appliance Repair Pasadena: (424) 325-0520">
 <Container>
 <div class="content">
