--- a/src/pages/brands/commercial-and-household.astro
+++ b/src/pages/brands/commercial-and-household.astro
@@ -5,87 +5,94 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
+import Navbar from "@components/navbar/navbar.astro";
 ---
- <Layout title="Same Day Appliance Repair - We Fix All Brands: (424) 325-0520">
-      <Container>
-<div class="content">
-    <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;"><h1>Trusted Appliance Repair Services for Commercial and Household Brands</h1>
-        <p>Welcome to Same Day Appliance Repair, your go-to solution for repairing a diverse range of commercial and household appliance brands. We understand the importance of having fully functional appliances in both residential and commercial settings, and our mission is to provide efficient and reliable repair services for various appliance brands.</p>
+
+<Navbar />
+<Layout title="Same Day Appliance Repair - We Fix All Brands: (424) 325-0520">
+  <Container>
+    <div class="content">
+      <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">
+        <h1>
+          Trusted Appliance Repair Services for Commercial and Household Brands
+        </h1>
+        <p>
+          Welcome to Same Day Appliance Repair, your go-to solution for
+          repairing a diverse range of commercial and household appliance
+          brands. We understand the importance of having fully functional
+          appliances in both residential and commercial settings, and our
+          mission is to provide efficient and reliable repair services for
+          various appliance brands.
+        </p>
 
         <h2>Expertise Across a Variety of Brands</h2>
 
-        <p>At Same Day Appliance Repair, our team of experienced technicians is well-versed in handling a wide array of appliance brands. We are proficient in repairing appliances from some of the leading manufacturers, including but not limited to:</p>
-<p>&bull; Samsung</br>
-&bull; Whirlpool</br>
-&bull; KitchenAid</br>
-&bull; Bosch</br>
-&bull; Frigidaire</br>
-&bull; Maytag</br>
-&bull; Sub-Zero</br>
-&bull; Subzero</br>
-&bull; Kenmore</br>
-&bull; General Electric</br>
-&bull; GE</br>
-&bull; LG</br>
-&bull; Liebherr</br>
-&bull; JennAir</br>
-&bull; Dacor</br>
-&bull; Thermador</br>
-&bull; Fisher & Paykel</br>
-&bull; Sub Zero</br>
-&bull; Viking</br>
-&bull; GE Monogram</br>
-&bull; Monogram</br>
-&bull; Beverage Air</br>
-&bull; Beverage-Air</br>
-&bull; Westlake</br>
-&bull; Coldline</br>
-&bull; Arctic Air</br>
-&bull; KITMA</br>
-&bull; U-Line</br>
-&bull; Wilprep</br>
-&bull; MoTak</br>
-&bull; Koolmore</br>
-&bull; Avantco</br>
-&bull; Vevor</br>
-&bull; Norpole</br>
-&bull; Turbo Air</br>
-&bull; Silver King</br>
-&bull; Megali</br>
-&bull; Everest</br>
-&bull; SMAD</br>
-&bull; Hoshizaki</br>
-&bull; Blue Star</br>
-&bull; Continental</br>
-&bull; Cooler Depot</br>
-&bull; SABA</br>
-&bull; Premium LEVELLA</br>
-&bull; Maxx Cold</br>
-&bull; Forno</br>
-&bull; Elite Kitchen Supply</br>
-&bull; Whynter</br>
-&bull; NewAir</br>
-&bull; Summit Appliance</br>
-&bull; Equator Advanced</br></p>
-  </div>
-    <br />
-<div style="background-color:#c3defa; padding:25px; border-radius: 25px;"> <h2>
-<h2>Quality Repairs for Lasting Solutions</h2>
-<p>We understand the importance of using genuine parts and employing the right techniques for each brand's appliances. Our technicians are trained to identify issues specific to each brand and provide tailored solutions that ensure the longevity and optimal performance of your appliances.</p>
+        <p>
+          At Same Day Appliance Repair, our team of experienced technicians is
+          well-versed in handling a wide array of appliance brands. We are
+          proficient in repairing appliances from some of the leading
+          manufacturers, including but not limited to:
+        </p>
+        <p>&bull; Samsung</p>
+        &bull; Whirlpool
+      </div>
+      &bull; KitchenAid
+    </div>
+    &bull; Bosch</Container
+  >
+  &bull; Frigidaire</Layout
+>
+&bull; Maytag &bull; Sub-Zero &bull; Subzero &bull; Kenmore &bull; General Electric
+&bull; GE &bull; LG &bull; Liebherr &bull; JennAir &bull; Dacor &bull; Thermador
+&bull; Fisher & Paykel &bull; Sub Zero &bull; Viking &bull; GE Monogram &bull; Monogram
+&bull; Beverage Air &bull; Beverage-Air &bull; Westlake &bull; Coldline &bull; Arctic
+Air &bull; KITMA &bull; U-Line &bull; Wilprep &bull; MoTak &bull; Koolmore &bull;
+Avantco &bull; Vevor &bull; Norpole &bull; Turbo Air &bull; Silver King &bull; Megali
+&bull; Everest &bull; SMAD &bull; Hoshizaki &bull; Blue Star &bull; Continental &bull;
+Cooler Depot &bull; SABA &bull; Premium LEVELLA &bull; Maxx Cold &bull; Forno &bull;
+Elite Kitchen Supply &bull; Whynter &bull; NewAir &bull; Summit Appliance &bull;
+Equator Advanced
 
-<h2>Commercial Appliance Expertise</h2>
+<br />
+<div style="background-color:#c3defa; padding:25px; border-radius: 25px;">
+  <h2>
+    <h2>Quality Repairs for Lasting Solutions</h2>
+    <p>
+      We understand the importance of using genuine parts and employing the
+      right techniques for each brand's appliances. Our technicians are trained
+      to identify issues specific to each brand and provide tailored solutions
+      that ensure the longevity and optimal performance of your appliances.
+    </p>
 
-<p>For businesses in various industries, we offer specialized repair services for commercial-grade appliances. Whether it's a restaurant, hotel, or any other commercial establishment, we have the expertise to handle complex appliance issues, minimizing downtime and ensuring smooth operations.</p>
+    <h2>Commercial Appliance Expertise</h2>
 
-<h2>Household Appliance Repairs</h2>
+    <p>
+      For businesses in various industries, we offer specialized repair services
+      for commercial-grade appliances. Whether it's a restaurant, hotel, or any
+      other commercial establishment, we have the expertise to handle complex
+      appliance issues, minimizing downtime and ensuring smooth operations.
+    </p>
 
-<p>Our comprehensive household appliance repair services cover a wide range of products commonly found in homes. Whether it's your kitchen, laundry room, or any other part of your house, we can efficiently diagnose and repair your household appliances to get them back to optimal working condition.</p>
+    <h2>Household Appliance Repairs</h2>
 
-<h2>Contact Us for Expert Repairs</h2>
+    <p>
+      Our comprehensive household appliance repair services cover a wide range
+      of products commonly found in homes. Whether it's your kitchen, laundry
+      room, or any other part of your house, we can efficiently diagnose and
+      repair your household appliances to get them back to optimal working
+      condition.
+    </p>
 
-<p>If you're experiencing issues with any of your commercial or household appliances from the brands mentioned above or any other brand, reach out to us today. Call us at [insert phone number] or use our online contact form to schedule an appointment. Our dedicated team is committed to providing top-notch repair services to ensure your appliances operate seamlessly for years to come.</p>
+    <h2>Contact Us for Expert Repairs</h2>
+
+    <p>
+      If you're experiencing issues with any of your commercial or household
+      appliances from the brands mentioned above or any other brand, reach out
+      to us today. Call us at [insert phone number] or use our online contact
+      form to schedule an appointment. Our dedicated team is committed to
+      providing top-notch repair services to ensure your appliances operate
+      seamlessly for years to come.
+    </p>
+  </h2>
 </div>
- </div>
-    <Cta />
-</Container>
-</Layout>
+<Cta />
