--- a/src/pages/price-list/dryer-heating-element-replacement-cost.astro
+++ b/src/pages/price-list/dryer-heating-element-replacement-cost.astro
@@ -6,52 +6,121 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
-
+import Navbar from "@components/navbar/navbar.astro";
 ---
+
+<Navbar />
 <Layout title="Dryer Heating Element Replacement Cost">
-<Container>
+  <Container>
     <main>
-        <h1><span class="animate-charcter">Dryer Heating Element Replacement Cost</span></h1>
-     
-     <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/lg-dryer-repair.webp" width="500" height="500" alt="Dryer Heating Element Replacement Cost">
-     
-     <Contactbtn /> 
-     </div>
-     
-     <div class="col-two">
-        <h2>Quality Service at Transparent Prices</h2>
-        <p>Welcome to the Same Day Appliance Repair, where we specialize in quick and reliable appliance repairs. If your dryer has stopped heating, the heating element might need a replacement. We offer a comprehensive heating element replacement service with a flat labor cost of $220, excluding parts. </p>
-        <p>Initially, technicians will diagnose the specific issue for the service fee of $65. During this visit, he will detail the problem and provide a breakdown of costs. If you opt for the repair, the service fee is waived, and you only pay for the repair itself. We include FREE professional dryer cleaning service with each repair because we understand that dusty dryer in a fire and a health hazard in your home. It also extents longevity of the dryer </p>
-        <p>This page will guide you through the signs that you need this service, what it includes, and how to schedule a repair.</p>
-        
-      </div></div>
+      <h1>
+        <span class="animate-charcter"
+          >Dryer Heating Element Replacement Cost</span
+        >
+      </h1>
+
+      <div class="two-col-grid">
+        <div class="col-one">
+          <img
+            class="img-header"
+            src="/images/lg-dryer-repair.webp"
+            width="500"
+            height="500"
+            alt="Dryer Heating Element Replacement Cost"
+          />
+
+          <Contactbtn />
+        </div>
+
+        <div class="col-two">
+          <h2>Quality Service at Transparent Prices</h2>
+          <p>
+            Welcome to the Same Day Appliance Repair, where we specialize in
+            quick and reliable appliance repairs. If your dryer has stopped
+            heating, the heating element might need a replacement. We offer a
+            comprehensive heating element replacement service with a flat labor
+            cost of $220, excluding parts.
+          </p>
+          <p>
+            Initially, technicians will diagnose the specific issue for the
+            service fee of $65. During this visit, he will detail the problem
+            and provide a breakdown of costs. If you opt for the repair, the
+            service fee is waived, and you only pay for the repair itself. We
+            include FREE professional dryer cleaning service with each repair
+            because we understand that dusty dryer in a fire and a health hazard
+            in your home. It also extents longevity of the dryer
+          </p>
+          <p>
+            This page will guide you through the signs that you need this
+            service, what it includes, and how to schedule a repair.
+          </p>
+        </div>
+      </div>
       <h2>What is a Dryer Heating Element?</h2>
-<p>The heating element in a dryer is a crucial component that generates the heat needed to dry your clothes. It's essentially a coil or a group of coils that become hot when electricity is passed through them. Over time, these elements can burn out or become defective, leading to a dryer that won't heat up.</p>
+      <p>
+        The heating element in a dryer is a crucial component that generates the
+        heat needed to dry your clothes. It's essentially a coil or a group of
+        coils that become hot when electricity is passed through them. Over
+        time, these elements can burn out or become defective, leading to a
+        dryer that won't heat up.
+      </p>
 
-<h2>Signs You Need Your Heating Element Replaced</h2>
-<p> &bull; No heat in the dryer: The most obvious sign that your heating element might need replacing.<br><br>
- &bull; Dryer takes longer to dry clothes: Inefficient heating can significantly increase drying times.<br><br>
- &bull; Dryer overheats: A malfunctioning element can cause the dryer to overheat.</p>
-<p>Recognizing these issues early can save you time and prevent further damages to your appliance.</p>
+      <h2>Signs You Need Your Heating Element Replaced</h2>
+      <p>
+        &bull; No heat in the dryer: The most obvious sign that your heating
+        element might need replacing.<br /><br />
+        &bull; Dryer takes longer to dry clothes: Inefficient heating can significantly
+        increase drying times.<br /><br />
+        &bull; Dryer overheats: A malfunctioning element can cause the dryer to overheat.
+      </p>
+      <p>
+        Recognizing these issues early can save you time and prevent further
+        damages to your appliance.
+      </p>
 
-Pricing Details: Transparent and Affordable
-<p>Our flat rate for replacing a dryer heating element is $220 for labor. The cost of parts varies depending on your dryer's model and make but typically ranges from $30 to $100. We source high-quality OEM parts to ensure reliability and performance. You will receive a detailed quote with the exact price of the part needed for your specific dryer model before any work begins.</p>
+      Pricing Details: Transparent and Affordable
+      <p>
+        Our flat rate for replacing a dryer heating element is $220 for labor.
+        The cost of parts varies depending on your dryer's model and make but
+        typically ranges from $30 to $100. We source high-quality OEM parts to
+        ensure reliability and performance. You will receive a detailed quote
+        with the exact price of the part needed for your specific dryer model
+        before any work begins.
+      </p>
 
-<h2>Why Choose The Same Day Appliance Repair for Dryer Heating Element Replacement?</h2>
-<p>&bull; Experienced Technicians: Our team is skilled in handling all major dryer brands and models.<br><br>
-&bull; Transparent Pricing: No hidden fees—just straightforward, honest service.<br><br>
-&bull; Quick Service: We aim to complete repairs quickly to minimize disruption to your routine.<br><br>
-&bull; Warranty: We provide up to a three month warranty of parts and labor.</p>
+      <h2>
+        Why Choose The Same Day Appliance Repair for Dryer Heating Element
+        Replacement?
+      </h2>
+      <p>
+        &bull; Experienced Technicians: Our team is skilled in handling all
+        major dryer brands and models.<br /><br />
+        &bull; Transparent Pricing: No hidden fees—just straightforward, honest service.<br
+        /><br />
+        &bull; Quick Service: We aim to complete repairs quickly to minimize disruption
+        to your routine.<br /><br />
+        &bull; Warranty: We provide up to a three month warranty of parts and labor.
+      </p>
 
-<h2>How to Save on Heating Element Replacement</h2>
-<p>&bull; Preventive Maintenance: Regular servicing can extend the life of your dryer and prevent costly repairs.<br><br>
-&bull; Service Bundles: Consider bundling this repair with other services for a discount.<br><br>
-&bull; Warranties: Make sure the appliance repair company that you hire has a warranty. We provide up to three month warranty.</p>
+      <h2>How to Save on Heating Element Replacement</h2>
+      <p>
+        &bull; Preventive Maintenance: Regular servicing can extend the life of
+        your dryer and prevent costly repairs.<br /><br />
+        &bull; Service Bundles: Consider bundling this repair with other services
+        for a discount.<br /><br />
+        &bull; Warranties: Make sure the appliance repair company that you hire has
+        a warranty. We provide up to three month warranty.
+      </p>
 
-<p>Schedule Your Repair Today</p>
-<p>Don’t let a broken dryer disrupt your day! Schedule an appointment with us online or call us directly. We’ll have your dryer running efficiently in no time. Use our contact us page or call customer service for immediate assistance.</p>
+      <p>Schedule Your Repair Today</p>
+      <p>
+        Don’t let a broken dryer disrupt your day! Schedule an appointment with
+        us online or call us directly. We’ll have your dryer running efficiently
+        in no time. Use our contact us page or call customer service for
+        immediate assistance.
+      </p>
 
       <Cta />
-    </Container>
-    </Layout>
-    
+    </main>
+  </Container>
+</Layout>
