--- a/src/pages/price-list/dryer-motor-replacement-cost.astro
+++ b/src/pages/price-list/dryer-motor-replacement-cost.astro
@@ -6,43 +6,95 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
-
+import Navbar from "@components/navbar/navbar.astro";
 ---
+
+<Navbar />
 <Layout title="Dryer Motor Replacement Cost">
-<Container>
+  <Container>
     <main>
-        <h1><span class="animate-charcter">Dryer Motor Replacement Cost</span></h1>
-     
-     <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/lg-dryer-repair.webp" width="500" height="500" alt="Dryer Motor Replacement Cost">
-     
-     <Contactbtn />
-     
-     </div>
-     
-     <div class="col-two">
-     <p>Dryer motors are essential components that allow the clothes dryer to operate efficiently by turning the drum and circulating air. Over time, these motors can wear out or fail, leading to a non-functional dryer. This guide provides detailed information on the cost factors, process, and considerations for replacing a dryer motor.</p>
-<h2>LG Dryer Motor Replacement Cost</h2>
-<p>The dryer motor replacement cost is $220, excluding parts. Initially, technicians will diagnose the specific issue for the service fee of $65. During this visit, he will detail the problem and provide a breakdown of costs. If you opt for the repair, the service fee is waived, and you only pay for the repair itself.</p>
-      </div></div>
-<h2>Dryer Motor Cost Factors</h2>
-<p>The cost of replacing a dryer motor depends on several factors:</p>
-<p>&bull; Type of Dryer: Standard electric dryers are usually cheaper to repair than gas dryers or high-end models with more features.<br><br>
-&bull; Motor Specification: The power and brand of the motor can significantly affect the cost. OEM (Original Equipment Manufacturer) parts are generally more expensive than aftermarket alternatives.<br><br>
-&bull; Labor Costs: Depending on your location and the service provider, labor costs can vary. Technicians may charge a flat rate or an hourly fee.</p>
-<h2>Average Dryer Motor Costs</h2>
-<p>&bull; Part Costs: The price of a new dryer motor ranges from $50 to $230, depending on the brand and specifications.<br><br>
-&bull; Labor Costs: Professional installation of a dryer motor will cost $220 at our company.<br><br>
-&bull; Total Cost: On average, expect to pay between $270 and $450 for the complete motor replacement service. </p>
-<h2>DIY vs. Professional Dryer Motor Replacement</h2>
-<p>&bull; DIY Replacement: If you have the necessary skills and tools, you can save on labor costs by replacing the dryer motor yourself. Ensure you understand the risks and steps involved.<br><br>
-&bull; Professional Replacement: Hiring a professional is recommended for safety and warranty considerations. Professionals can ensure the job is done correctly and efficiently.</p>
-<h2>Choosing the Right Service Provider for Dryer Motor Replacement</h2>
-<p>&bull; Certification and Experience: Look for technicians with certifications and experience specific to appliance repair.<br><br>
-&bull; Warranty and Guarantees: Opt for services that offer a warranty on parts and labor to ensure value for your investment.<br><br>
-&bull; Reviews and Recommendations: Check online reviews and ask for recommendations to find a reliable service provider.</p>
-<h2>Conclusion</h2>
-<p>Replacing a dryer motor is a significant but necessary investment to extend the lifespan of your appliance. By understanding the cost factors and choosing the right service or approach for replacement, you can ensure your dryer continues to operate effectively for years to come.</p>
+      <h1>
+        <span class="animate-charcter">Dryer Motor Replacement Cost</span>
+      </h1>
+
+      <div class="two-col-grid">
+        <div class="col-one">
+          <img
+            class="img-header"
+            src="/images/lg-dryer-repair.webp"
+            width="500"
+            height="500"
+            alt="Dryer Motor Replacement Cost"
+          />
+
+          <Contactbtn />
+        </div>
+
+        <div class="col-two">
+          <p>
+            Dryer motors are essential components that allow the clothes dryer
+            to operate efficiently by turning the drum and circulating air. Over
+            time, these motors can wear out or fail, leading to a non-functional
+            dryer. This guide provides detailed information on the cost factors,
+            process, and considerations for replacing a dryer motor.
+          </p>
+          <h2>LG Dryer Motor Replacement Cost</h2>
+          <p>
+            The dryer motor replacement cost is $220, excluding parts.
+            Initially, technicians will diagnose the specific issue for the
+            service fee of $65. During this visit, he will detail the problem
+            and provide a breakdown of costs. If you opt for the repair, the
+            service fee is waived, and you only pay for the repair itself.
+          </p>
+        </div>
+      </div>
+      <h2>Dryer Motor Cost Factors</h2>
+      <p>The cost of replacing a dryer motor depends on several factors:</p>
+      <p>
+        &bull; Type of Dryer: Standard electric dryers are usually cheaper to
+        repair than gas dryers or high-end models with more features.<br /><br
+        />
+        &bull; Motor Specification: The power and brand of the motor can significantly
+        affect the cost. OEM (Original Equipment Manufacturer) parts are generally
+        more expensive than aftermarket alternatives.<br /><br />
+        &bull; Labor Costs: Depending on your location and the service provider,
+        labor costs can vary. Technicians may charge a flat rate or an hourly fee.
+      </p>
+      <h2>Average Dryer Motor Costs</h2>
+      <p>
+        &bull; Part Costs: The price of a new dryer motor ranges from $50 to
+        $230, depending on the brand and specifications.<br /><br />
+        &bull; Labor Costs: Professional installation of a dryer motor will cost
+        $220 at our company.<br /><br />
+        &bull; Total Cost: On average, expect to pay between $270 and $450 for the
+        complete motor replacement service.
+      </p>
+      <h2>DIY vs. Professional Dryer Motor Replacement</h2>
+      <p>
+        &bull; DIY Replacement: If you have the necessary skills and tools, you
+        can save on labor costs by replacing the dryer motor yourself. Ensure
+        you understand the risks and steps involved.<br /><br />
+        &bull; Professional Replacement: Hiring a professional is recommended for
+        safety and warranty considerations. Professionals can ensure the job is done
+        correctly and efficiently.
+      </p>
+      <h2>Choosing the Right Service Provider for Dryer Motor Replacement</h2>
+      <p>
+        &bull; Certification and Experience: Look for technicians with
+        certifications and experience specific to appliance repair.<br /><br />
+        &bull; Warranty and Guarantees: Opt for services that offer a warranty on
+        parts and labor to ensure value for your investment.<br /><br />
+        &bull; Reviews and Recommendations: Check online reviews and ask for recommendations
+        to find a reliable service provider.
+      </p>
+      <h2>Conclusion</h2>
+      <p>
+        Replacing a dryer motor is a significant but necessary investment to
+        extend the lifespan of your appliance. By understanding the cost factors
+        and choosing the right service or approach for replacement, you can
+        ensure your dryer continues to operate effectively for years to come.
+      </p>
       <Cta />
-    </Container>
-    </Layout>
-    
+    </main>
+  </Container>
+</Layout>
