--- a/src/pages/price-list/dryer-vent-installation-cost.astro
+++ b/src/pages/price-list/dryer-vent-installation-cost.astro
@@ -6,75 +6,168 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
-
+import Navbar from "@components/navbar/navbar.astro";
 ---
+
+<Navbar />
 <Layout title="Dryer Vent Installation Cost">
-<Container>
+  <Container>
     <main>
-        <h1><span class="animate-charcter">Dryer Vent Installation Cost</span></h1>
-     
-     <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/lg-dryer-repair.webp" width="500" height="500" alt="Dryer Vent Installation Cost">
-     
-     <Contactbtn />
-     
-     </div>
-     
-     <div class="col-two">
-        <p>Welcome to our dedicated page for dryer vent installation cost, where we prioritize safety and efficiency in every installation. A properly installed dryer vent not only ensures the smooth operation of your dryer but also reduces fire hazards and energy consumption. Trust our experts to handle your vent installation needs with precision and reliability.</p>
-<h2>Dryer Vent Installation Cost</h2>
-<p>The dryer vent installation cost is $190, excluding parts. Initially, technicians will diagnose the specific issue for the service fee of $65. During this visit, he will detail the problem and provide a breakdown of costs. If you opt for the repair, the service fee is waived, and you only pay for the repair itself.</p>
-        
-      </div></div>
+      <h1>
+        <span class="animate-charcter">Dryer Vent Installation Cost</span>
+      </h1>
+
+      <div class="two-col-grid">
+        <div class="col-one">
+          <img
+            class="img-header"
+            src="/images/lg-dryer-repair.webp"
+            width="500"
+            height="500"
+            alt="Dryer Vent Installation Cost"
+          />
+
+          <Contactbtn />
+        </div>
+
+        <div class="col-two">
+          <p>
+            Welcome to our dedicated page for dryer vent installation cost,
+            where we prioritize safety and efficiency in every installation. A
+            properly installed dryer vent not only ensures the smooth operation
+            of your dryer but also reduces fire hazards and energy consumption.
+            Trust our experts to handle your vent installation needs with
+            precision and reliability.
+          </p>
+          <h2>Dryer Vent Installation Cost</h2>
+          <p>
+            The dryer vent installation cost is $190, excluding parts.
+            Initially, technicians will diagnose the specific issue for the
+            service fee of $65. During this visit, he will detail the problem
+            and provide a breakdown of costs. If you opt for the repair, the
+            service fee is waived, and you only pay for the repair itself.
+          </p>
+        </div>
+      </div>
       <h2>The Importance of Proper Dryer Vent Installation</h2>
-      <p>&bull; Fire Prevention: A well-installed dryer vent reduces the risk of lint buildup, a common cause of dryer fires.<br><br>
-      &bull; Energy Efficiency: Proper ventilation helps your dryer operate more efficiently, saving energy and reducing utility bills.<br><br>
-      &bull; Dryer Performance: A clear vent allows for faster drying times and better overall performance of your dryer.<br><br></p>
-      
+      <p>
+        &bull; Fire Prevention: A well-installed dryer vent reduces the risk of
+        lint buildup, a common cause of dryer fires.<br /><br />
+        &bull; Energy Efficiency: Proper ventilation helps your dryer operate more
+        efficiently, saving energy and reducing utility bills.<br /><br />
+        &bull; Dryer Performance: A clear vent allows for faster drying times and
+        better overall performance of your dryer.<br /><br />
+      </p>
+
       <h2>Factors Affecting Dryer Vent Installation Cost</h2>
-      <p>&bull; Vent Length: Longer vent ducts require more materials and labor, impacting the overall cost.<br><br>
-      &bull; Vent Material: The type of vent material chosen (e.g., aluminum, rigid metal) can influence the installation cost.<br><br>
-      &bull; Complexity of Installation: Factors such as vent routing through walls, ceilings, or floors can affect installation complexity and cost.<br><br>
-      &bull; Additional Components: Installation of additional components like vent hoods or booster fans may add to the overall cost.</p>
-      
+      <p>
+        &bull; Vent Length: Longer vent ducts require more materials and labor,
+        impacting the overall cost.<br /><br />
+        &bull; Vent Material: The type of vent material chosen (e.g., aluminum, rigid
+        metal) can influence the installation cost.<br /><br />
+        &bull; Complexity of Installation: Factors such as vent routing through walls,
+        ceilings, or floors can affect installation complexity and cost.<br
+        /><br />
+        &bull; Additional Components: Installation of additional components like
+        vent hoods or booster fans may add to the overall cost.
+      </p>
+
       <h2>Our Transparent Pricing Process</h2>
-      <p>&bull; Initial Assessment: We conduct an assessment to determine your specific vent installation requirements.<br><br>
-      &bull; Cost Estimate: Based on the assessment, we provide a detailed cost estimate that includes materials and labor.<br><br>
-      &bull; Professional Installation: Our skilled technicians handle the installation process efficiently and with attention to detail.<br><br>
-      &bull; Post-Installation Check: We ensure that the installed vent meets safety standards and performs optimally.</p>
-      <h3>Signs Your Dryer Needs a Vent Installation</h3>  
+      <p>
+        &bull; Initial Assessment: We conduct an assessment to determine your
+        specific vent installation requirements.<br /><br />
+        &bull; Cost Estimate: Based on the assessment, we provide a detailed cost
+        estimate that includes materials and labor.<br /><br />
+        &bull; Professional Installation: Our skilled technicians handle the installation
+        process efficiently and with attention to detail.<br /><br />
+        &bull; Post-Installation Check: We ensure that the installed vent meets safety
+        standards and performs optimally.
+      </p>
+      <h3>Signs Your Dryer Needs a Vent Installation</h3>
       <h4>1. Slow Drying Times</h4>
-<p>If your clothes are taking longer than usual to dry, it could be a sign of poor ventilation. A clogged or inadequate vent restricts airflow, making it harder for your dryer to expel moisture efficiently.</p>
+      <p>
+        If your clothes are taking longer than usual to dry, it could be a sign
+        of poor ventilation. A clogged or inadequate vent restricts airflow,
+        making it harder for your dryer to expel moisture efficiently.
+      </p>
 
-<h4>2. Excessive Lint Buildup</h4>
-<p>Check the lint trap after each cycle. If you notice an unusually large amount of lint, it might indicate that the vent isn't properly removing lint and moisture from the dryer. This buildup can pose a fire hazard and reduce dryer performance.</p>
+      <h4>2. Excessive Lint Buildup</h4>
+      <p>
+        Check the lint trap after each cycle. If you notice an unusually large
+        amount of lint, it might indicate that the vent isn't properly removing
+        lint and moisture from the dryer. This buildup can pose a fire hazard
+        and reduce dryer performance.
+      </p>
 
-<h4>3. Overheating Dryer</h4>
-<p>An overheating dryer is a red flag for ventilation issues. If the exterior of your dryer feels excessively hot to the touch or if you notice a burning smell during operation, it's crucial to address the ventilation system promptly.</p>
+      <h4>3. Overheating Dryer</h4>
+      <p>
+        An overheating dryer is a red flag for ventilation issues. If the
+        exterior of your dryer feels excessively hot to the touch or if you
+        notice a burning smell during operation, it's crucial to address the
+        ventilation system promptly.
+      </p>
 
-<h4>4. Mold or Mildew Odors</h4>
-<p>Poor ventilation can lead to moisture buildup in the dryer, creating an environment conducive to mold and mildew growth. If you detect musty odors coming from your dryer or laundry area, it's a sign that the ventilation system needs attention.</p>
+      <h4>4. Mold or Mildew Odors</h4>
+      <p>
+        Poor ventilation can lead to moisture buildup in the dryer, creating an
+        environment conducive to mold and mildew growth. If you detect musty
+        odors coming from your dryer or laundry area, it's a sign that the
+        ventilation system needs attention.
+      </p>
 
-<h4>5. Visible Lint Around the Dryer</h4>
-<p>Inspect the area around your dryer for visible lint accumulation. If you notice lint gathering on walls, floors, or near the dryer exhaust, it indicates that the vent isn't effectively capturing and venting lint outside.</p>
+      <h4>5. Visible Lint Around the Dryer</h4>
+      <p>
+        Inspect the area around your dryer for visible lint accumulation. If you
+        notice lint gathering on walls, floors, or near the dryer exhaust, it
+        indicates that the vent isn't effectively capturing and venting lint
+        outside.
+      </p>
 
-<h4>6. Excessive Humidity in the Laundry Room</h4>
-<p>A well-functioning vent should expel moist air outside, preventing excessive humidity in the laundry room. If you experience consistently high humidity levels or condensation near the dryer, it's likely due to ventilation issues.</p>
+      <h4>6. Excessive Humidity in the Laundry Room</h4>
+      <p>
+        A well-functioning vent should expel moist air outside, preventing
+        excessive humidity in the laundry room. If you experience consistently
+        high humidity levels or condensation near the dryer, it's likely due to
+        ventilation issues.
+      </p>
 
-<h4>7. Noisy Dryer Operation</h4>
-<p>Unusual noises such as rattling, banging, or squealing during dryer operation can be caused by airflow restrictions due to a clogged or improperly installed vent. Addressing the ventilation system can restore quiet and smooth dryer operation.</p>
+      <h4>7. Noisy Dryer Operation</h4>
+      <p>
+        Unusual noises such as rattling, banging, or squealing during dryer
+        operation can be caused by airflow restrictions due to a clogged or
+        improperly installed vent. Addressing the ventilation system can restore
+        quiet and smooth dryer operation.
+      </p>
 
-<h4>8. Clothes Feeling Damp or Hot After Drying</h4>
-<p>If your clothes feel damp or excessively hot at the end of the drying cycle, it indicates that moisture isn't being adequately removed from the dryer. This can result from a vent that isn't venting properly.</p>
+      <h4>8. Clothes Feeling Damp or Hot After Drying</h4>
+      <p>
+        If your clothes feel damp or excessively hot at the end of the drying
+        cycle, it indicates that moisture isn't being adequately removed from
+        the dryer. This can result from a vent that isn't venting properly.
+      </p>
 
       <h2>Why Choose Us for Dryer Vent Installation?</h2>
-      <p>&bull; Experienced Technicians: Our team has extensive experience in dryer vent installation, ensuring a job done right the first time.<br><br>
-      &bull; Quality Materials: We use high-quality vent materials and accessories for long-lasting performance.<br><br>
-      &bull; Compliance and Safety: We adhere to industry standards and regulations to ensure safety and code compliance.<br><br>
-      &bull; Customer Satisfaction: Your satisfaction is our priority, and we strive to exceed your expectations with every installation.</p>
-      
-      <h2>Contact Us for a Quote</h2>
-      <p>Ready to enhance the safety and efficiency of your dryer? Contact us today for a personalized quote for dryer vent installation. Our friendly team is here to answer your questions and schedule a convenient installation appointment. Trust us for reliable and cost-effective dryer vent installation services.</p>
-      <Cta />
-</Container>
-</Layout>
+      <p>
+        &bull; Experienced Technicians: Our team has extensive experience in
+        dryer vent installation, ensuring a job done right the first time.<br
+        /><br />
+        &bull; Quality Materials: We use high-quality vent materials and accessories
+        for long-lasting performance.<br /><br />
+        &bull; Compliance and Safety: We adhere to industry standards and regulations
+        to ensure safety and code compliance.<br /><br />
+        &bull; Customer Satisfaction: Your satisfaction is our priority, and we strive
+        to exceed your expectations with every installation.
+      </p>
 
+      <h2>Contact Us for a Quote</h2>
+      <p>
+        Ready to enhance the safety and efficiency of your dryer? Contact us
+        today for a personalized quote for dryer vent installation. Our friendly
+        team is here to answer your questions and schedule a convenient
+        installation appointment. Trust us for reliable and cost-effective dryer
+        vent installation services.
+      </p>
+      <Cta />
+    </main>
+  </Container>
+</Layout>
