--- a/src/pages/price-list/oven-repair-cost.astro
+++ b/src/pages/price-list/oven-repair-cost.astro
@@ -5,6 +5,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Costanchor from "@components/price-list/components_dryer-repair-cost.astro";
 import Cta from "@components/cta.astro";
+import Navbar from "@components/navbar/navbar.astro";
 
 import "css/price/style_price.css";
 ---
@@ -27,6 +28,7 @@ import "css/price/style_price.css";
   });
 </script>
 
+<Navbar />
 <Layout title="Oven Repair Cost">
   <Container>
     <main>
