--- a/src/pages/price-list/refrigerator-repair-cost.astro
+++ b/src/pages/price-list/refrigerator-repair-cost.astro
@@ -5,6 +5,7 @@ import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Costanchor from "@components/price-list/components_dryer-repair-cost.astro";
 import Cta from "@components/cta.astro";
+import Navbar from "@components/navbar/navbar.astro";
 
 import "css/price/style_price.css";
 ---
@@ -27,6 +28,7 @@ import "css/price/style_price.css";
   });
 </script>
 
+<Navbar />
 <Layout title="Refrigerator Repair Cost">
   <Container>
     <main>
@@ -93,7 +95,7 @@ import "css/price/style_price.css";
 
           <div class="head_pricing-policy_foto-b">
             <img
-            loading="lazy"
+              loading="lazy"
               width="500px"
               height="500px"
               src="/img-price/refrigerator-repair-cost/free-refrigerator-repair-estimates-2.webp"
@@ -322,7 +324,7 @@ import "css/price/style_price.css";
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
             <img
-            loading="lazy"
+              loading="lazy"
               width="600px"
               height="500px"
               src="/img-price/refrigerator-repair-cost/refrigerator-repair-labor-cost-3.webp"
@@ -506,7 +508,7 @@ import "css/price/style_price.css";
 
           <div class="head_pricing-policy_foto-b">
             <img
-            loading="lazy"
+              loading="lazy"
               width="500px"
               height="500px"
               src="/img-price/refrigerator-repair-cost/refrigerator-repair-maintenance-cost-4.webp"
@@ -619,7 +621,7 @@ import "css/price/style_price.css";
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
             <img
-            loading="lazy"
+              loading="lazy"
               width="600px"
               height="500px"
               src="/img-price/refrigerator-repair-cost/refrigerator-repair-cost-near-me-5.webp"
