--- a/src/components/losangeles.astro
+++ b/src/components/losangeles.astro
@@ -14,30 +14,29 @@ import { Icon } from "astro-icon";
 <div
   class="bg-black p-8 md:px-20 md:py-20 mt-20 mx-auto max-w-5xl rounded-lg flex flex-col items-center text-center">
   <div class="two-col-grid">
-    <div class="col-one">
-      <h4 style="color:#ffffff; font-size:20px;">
-        Don't Wait! Contact Us Today.
-      </h4>
-      <p class="text-slate-400 mt-4 text-lg md:text-xl"></p>
-      <div class="flex mt-5">
-        <Link href="tel:14243250520" style="inverted">Call: (424) 325-0520</Link
-        >&nbsp;&nbsp;<Link href="/book" style="inverted">Book</Link>
-      </div>
+    <div class=" col-one">
+    <h4 style="color:#ffffff; font-size:20px;">
+      Don't Wait! Contact Us Today.
+    </h4>
+    <p class="text-slate-400 mt-4 text-lg md:text-xl"></p>
+    <div class="flex mt-5">
+      <Link href="tel:14243250520" style="inverted">Call: (424) 325-0520</Link
+      >&nbsp;&nbsp;<Link href="/book" style="inverted">Book</Link>
     </div>
-    <div class="col-two">
-      <h3 style="color:#ffffff; margin-top:0; padding-top:0;">
-        Same Day Appliance Repair
-      </h3>
-      <p style="color:#ffffff;">
-        <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />435 E 30th
-        St, Los Angeles, CA, 90011 <br />
-        <Icon class="text-gray-400 w-4 h-4" name="uil:phone" />Phone: <a
-          style="color:#ffffff;"
-          src="tell:+14243250520">(424) 325-0520</a
-        ><br />
-        <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" />email:
-        info@samedayappliance.repair
-      </p>
-    </div>
+  </div>
+  <div class="col-two">
+    <h3 style="color:#ffffff; margin-top:0; padding-top:0;">
+      Same Day Appliance Repair
+    </h3>
+    <p style="color:#ffffff;">
+      <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />435 E 30th St,
+      Los Angeles, CA, 90011 <br />
+      <Icon class="text-gray-400 w-4 h-4" name="uil:phone" />Phone: <a
+        style="color:#ffffff;"
+        src="tell:+14243250520">(424) 325-0520</a
+      ><br />
+      <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" />email:
+      info@samedayappliance.repair
+    </p>
   </div>
 </div>
