--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -4,41 +4,60 @@ import Link from "@components/ui/link.astro";
 import Dropdown from "./dropdown.astro";
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
+import "components/css-components/style-header.css";
+
 const menuitems = [
   {
     title: "Services",
     path: "/services/commercial-and-household",
     children: [
-    { title: "Refrigerator Repair", path: "/services/refrigerator-repair" },
-    { title: "Freezer Repair", path: "/services/freezer-repair" },
-    { title: "Washing Machine Repair", path: "/services/washing-machine-repair" },
-    { title: "Dryer Repair", path: "/services/dryer-repair" },
-    { title: "Stove/Range Repair", path: "/services/stove-repair" },
-    { title: "Dishwasher Repair", path: "/services/dishwasher-repair" },
-    { title: "Oven Repair", path: "/services/oven-repair"},
-    { title: "Cooktop Repair", path: "/services/cooktop-repair"},
-    { title: "Microwave Repair", path: "/services/microwave-repair"},
-    { title: "Range Hood Repair", path: "/services/range-hood-repair"},
-    { title: "Fireplace Repair", path: "/services/fireplace-repair"},
-    { title: "BBQ Grill Repair", path: "/services/bbq-grill-repair"},
-    { title: "____________________" },
-    { title: "Commercial Refrigerator Repair", path: "/services/commercial-refrigerator-repair-los-angeles" },
-    { title: "Commercial Freezer Repair", path: "/services/commercial-freezer-repair" },
-    { title: "Commercial Dishwasher Repair", path: "/services/commercial-dishwasher-repair"},
-    { title: "Commercial Dryer Repair", path: "/services/commercial-dryer-repair"},
-    
+      { title: "Refrigerator Repair", path: "/services/refrigerator-repair" },
+      { title: "Freezer Repair", path: "/services/freezer-repair" },
+      {
+        title: "Washing Machine Repair",
+        path: "/services/washing-machine-repair",
+      },
+      { title: "Dryer Repair", path: "/services/dryer-repair" },
+      { title: "Stove/Range Repair", path: "/services/stove-repair" },
+      { title: "Dishwasher Repair", path: "/services/dishwasher-repair" },
+      { title: "Oven Repair", path: "/services/oven-repair" },
+      { title: "Cooktop Repair", path: "/services/cooktop-repair" },
+      { title: "Microwave Repair", path: "/services/microwave-repair" },
+      { title: "Range Hood Repair", path: "/services/range-hood-repair" },
+      { title: "Fireplace Repair", path: "/services/fireplace-repair" },
+      { title: "BBQ Grill Repair", path: "/services/bbq-grill-repair" },
+      { title: "____________________" },
+      {
+        title: "Commercial Refrigerator Repair",
+        path: "/services/commercial-refrigerator-repair-los-angeles",
+      },
+      {
+        title: "Commercial Freezer Repair",
+        path: "/services/commercial-freezer-repair",
+      },
+      {
+        title: "Commercial Dishwasher Repair",
+        path: "/services/commercial-dishwasher-repair",
+      },
+      {
+        title: "Commercial Dryer Repair",
+        path: "/services/commercial-dryer-repair",
+      },
     ],
   },
   {
     title: "Service Areas",
     path: "/areas/los-angeles-and-surrounding-areas",
     children: [
-    { title: "Los Angeles", path: "/areas/los-angeles" },
-    { title: "Pasadena", path: "/areas/pasadena" },  
-    { title: "Los Feliz", path: "/areas/los-feliz" },
-    { title: "Marina Del Rey", path: "/areas/marina-del-rey" },
-    { title: "Santa Monica", path: "/areas/santa-monica" },
-    { title: "Los Angeles County", path: "/areas/los-angeles-and-surrounding-areas" },
+      { title: "Los Angeles", path: "/areas/los-angeles" },
+      { title: "Pasadena", path: "/areas/pasadena" },
+      { title: "Los Feliz", path: "/areas/los-feliz" },
+      { title: "Marina Del Rey", path: "/areas/marina-del-rey" },
+      { title: "Santa Monica", path: "/areas/santa-monica" },
+      {
+        title: "Los Angeles County",
+        path: "/areas/los-angeles-and-surrounding-areas",
+      },
     ],
   },
   {
@@ -49,10 +68,16 @@ const menuitems = [
     title: "Price",
     path: "/price-list/appliance-reapir-cost",
     children: [
-    { title: "Dryer Repair Cost", path: "/price-list/dryer-repair-cost" },
-    { title: "Dishwasher Repair Cost", path: "/price-list/dishwasher-repair-cost" },  
-    { title: "Dishwasher Repair Cost", path: "/price-list/oven-repair-cost" },  
-    { title: "Dishwasher Repair Cost", path: "/price-list/refrigerator-repair-cost" },  
+      { title: "Dryer Repair Cost", path: "/price-list/dryer-repair-cost" },
+      {
+        title: "Dishwasher Repair Cost",
+        path: "/price-list/dishwasher-repair-cost",
+      },
+      { title: "Dishwasher Repair Cost", path: "/price-list/oven-repair-cost" },
+      {
+        title: "Dishwasher Repair Cost",
+        path: "/price-list/refrigerator-repair-cost",
+      },
     ],
   },
   {
@@ -62,60 +87,121 @@ const menuitems = [
 ];
 ---
 
+<!-- скрипт при открытом мобильном меню  -->
+<script defer>
+  document.addEventListener("DOMContentLoaded", function () {
+    const nav = document.querySelector(".astronav-items");
+    const insideHeaderFull = document.querySelector(".inside_header-full");
+
+    function toggleInsideHeaderDisplay() {
+      if (!nav.classList.contains("hidden")) {
+        insideHeaderFull.style.display = "block";
+      } else {
+        insideHeaderFull.style.display = "";
+      }
+    }
+    nav.addEventListener("transitionend", toggleInsideHeaderDisplay);
+  });
+</script>
+
 <Container>
-  <header class="flex flex-col lg:flex-row justify-between items-center my-5">
-    <Astronav>
-      <div class="flex w-full lg:w-auto items-center justify-between">
-        <a href="/" class="text-lg"
-          ><span class="font-bold text-slate-800" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">SAME DAY APPLIANCE REAPAIR</span><span
-            class="text-slate-500"></span
-          >
-        </a>
-        <div class="block lg:hidden">
-          <MenuIcon class="w-4 h-4 text-gray-800" />
+  <header
+    class="flex flex-col lg:flex-row justify-between items-center my-5 header-full">
+    <div class="inside-reviews_header-full">
+      <div class="inside_header-full">
+        <Astronav>
+          <div class="flex w-full lg:w-auto items-center justify-between">
+            <a href="/" class="text-lg"
+              ><span
+                class="font-bold text-slate-800"
+                style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
+                >SAME DAY APPLIANCE REAPAIR</span
+              ><span class="text-slate-500"></span>
+            </a>
+            <div class="block lg:hidden">
+              <MenuIcon class="w-4 h-4 text-gray-800" />
+            </div>
+          </div>
+          <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
+            <ul class="flex flex-col lg:flex-row lg:gap-3">
+              {
+                menuitems.map((item, index) => (
+                  <>
+                    {item.children && (
+                      <Dropdown
+                        title={item.title}
+                        children={item.children}
+                        lastItem={index === menuitems.length - 1}
+                      />
+                    )}
+
+                    {!item.children && (
+                      <li>
+                        <a
+                          href={item.path}
+                          class="flex lg:px-3 py-2 items-center text-gray-600 hover:text-gray-900">
+                          <span> {item.title}</span>
+                          {item.badge && (
+                            <span class="ml-1 px-2 py-0.5 text-[10px] animate-pulse font-semibold uppercase text-white bg-indigo-600 rounded-full">
+                              New
+                            </span>
+                          )}
+                        </a>
+                      </li>
+                    )}
+                  </>
+                ))
+              }
+            </ul>
+            <div class="lg:hidden flex items-center mt-3 gap-4">
+              <Link href="tel:+14243250520" style="muted" block size="md"
+                >CALL US: (424) 325-0520</Link
+              >
+
+              <!--Start of Housecallpro Online booking button-->
+              <button
+                data-token="9e68ce292ba246dbba0fe928b98791f7"
+                data-orgname="Same-Day-Appliance-Repair"
+                class="hcp-button"
+                onClick="HCPWidget.openModal()">
+                Book
+              </button>
+              <script
+                async
+                src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"
+              ></script>
+              <!--End of Housecallpro Online booking button-->
+            </div>
+          </MenuItems>
+        </Astronav>
+        <div>
+          <div class="hidden lg:flex items-center gap-4">
+            <div class="call-header">
+              <a href="tel:+14243250520">CALL US: (424) 325-0520</a>
+            </div>
+            <!--Start of Housecallpro Online booking button-->
+            <button
+              data-token="9e68ce292ba246dbba0fe928b98791f7"
+              data-orgname="Same-Day-Appliance-Repair"
+              class="hcp-button"
+              onClick="HCPWidget.openModal()">
+              Book
+            </button>
+            <script
+              async
+              src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"
+            ></script>
+            <!--End of Housecallpro Online booking button-->
+          </div>
         </div>
       </div>
-      <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
-        <ul class="flex flex-col lg:flex-row lg:gap-3">
-          {
-            menuitems.map((item, index) => (
-              <>
-                {item.children && (
-                  <Dropdown
-                    title={item.title}
-                    children={item.children}
-                    lastItem={index === menuitems.length - 1}
-                  />
-                )}
-
-                {!item.children && (
-                  <li>
-                    <a
-                      href={item.path}
-                      class="flex lg:px-3 py-2 items-center text-gray-600 hover:text-gray-900">
-                      <span> {item.title}</span>
-                      {item.badge && (
-                        <span class="ml-1 px-2 py-0.5 text-[10px] animate-pulse font-semibold uppercase text-white bg-indigo-600 rounded-full">
-                          New
-                        </span>
-                      )}
-                    </a>
-                  </li>
-                )}
-              </>
-            ))
-          }
-        </ul>
-        <div class="lg:hidden flex items-center mt-3 gap-4">
-          <Link href="tel:+14243250520" style="muted" block size="md">CALL US: (424) 325-0520</Link>
-           <!--Start of Housecallpro Online booking button--> <button data-token="9e68ce292ba246dbba0fe928b98791f7" data-orgname="Same-Day-Appliance-Repair" class="hcp-button" onClick="HCPWidget.openModal()"> Book </button> <script async src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"> </script> <!--End of Housecallpro Online booking button-->
-        </div>
-      </MenuItems>
-    </Astronav>
-    <div>
-      <div class="hidden lg:flex items-center gap-4">
-        <a href="tel:+14243250520">CALL US: (424) 325-0520</a>
-        <!--Start of Housecallpro Online booking button--> <button data-token="9e68ce292ba246dbba0fe928b98791f7" data-orgname="Same-Day-Appliance-Repair" class="hcp-button" onClick="HCPWidget.openModal()"> Book </button> <script async src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"> </script> <!--End of Housecallpro Online booking button-->
+      <div class="reviews">
+        <p>
+          <a href="#reviews"
+            ><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0 </strong> (Google
+            Rating)<a><a href="#reviews">(Thumbtack Rating)<a></a></a> </a>
+          </a>
+        </p>
       </div>
     </div>
   </header>
