--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,10 @@
 ---
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
+import Navbar from "@components/navbar/navbar.astro";
 ---
 
+<Navbar />
 <Layout title="404 Not Found">
   <Container>
     <div class="min-h-[calc(100vh-16rem)] flex items-center justify-center">
