--- a/src/pages/areas/los-angeles.astro
+++ b/src/pages/areas/los-angeles.astro
@@ -6,7 +6,9 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Contactbtn from "@components/contactbtn.astro";
+import Navbar from "@components/navbar/navbar.astro";
 ---
+<Navbar />
 <Layout title="Same Day Appliance Repair Los Angeles">
 <Container>
 <div class="content">
