--- a/src/pages/price-list/dishwasher-repair-cost.astro
+++ b/src/pages/price-list/dishwasher-repair-cost.astro
@@ -6,8 +6,10 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
+import Navbar from "@components/navbar/navbar.astro";
 
 ---
+<Navbar />
 <Layout title="Dishwasher Replacement Cost">
 <Container>
     <main>
