--- a/src/pages/price-list/dryer-idler-pulley-replacement-cost.astro
+++ b/src/pages/price-list/dryer-idler-pulley-replacement-cost.astro
@@ -6,51 +6,108 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
-
+import Navbar from "@components/navbar/navbar.astro";
 ---
+
+<Navbar />
 <Layout title="Dryer Idler Pulley Replacement Cost">
-<Container>
+  <Container>
     <main>
-        <h1><span class="animate-charcter">Dryer Idler Pulley Replacement Cost</span></h1>
-     
-     <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/lg-dryer-repair.webp" width="500" height="500" alt="Dryer Idler Pulley Replacement Cost">
-     
-     <Contactbtn />
-     
-     </div>
-     
-     <div class="col-two">
-      <p>Welcome to our dedicated page for dryer idler pulley replacement cost, where we prioritize the smooth and efficient functioning of your dryer. The idler pulley plays a crucial role in maintaining proper tension on the dryer belt, ensuring smooth rotation of the drum. Over time, this component can wear out, leading to noise, vibration, or even dryer malfunctions. Trust our expert technicians to replace your dryer's idler pulley promptly and affordably.</p>
-<h2>Dryer Idler Pulley Replacement Cost</h2>
-<p>The dryer idler pulley replacement cost is $220, excluding parts. Initially, technicians will diagnose the specific issue for the service fee of $65. During this visit, he will detail the problem and provide a breakdown of costs. If you opt for the repair, the service fee is waived, and you only pay for the repair itself.</p>
-      </div></div>
-<h2>Signs Your Dryer Idler Pulley Needs Replacement</h2>
-<p>&bull; Squeaking or Grinding Noises: Unusual sounds during dryer operation often indicate a worn-out idler pulley.<br><br>
-&bull; Excessive Drum Movement: If you notice excessive movement or wobbling of the dryer drum, the idler pulley may be at fault.<br><br>
-&bull; Belt Slippage: A loose or slipping dryer belt is a common symptom of an idler pulley that needs replacement.</p>
+      <h1>
+        <span class="animate-charcter">Dryer Idler Pulley Replacement Cost</span
+        >
+      </h1>
 
-<h2>Our Replacement Process</h2>
-<p>&bull; Diagnosis: Our experienced technicians will inspect your dryer to identify the faulty idler pulley.<br><br>
-&bull; Cost Estimate: We provide a transparent cost estimate for the replacement service, including parts and labor.<br><br>
-&bull; Professional Replacement: Using high-quality replacement parts, we install a new idler pulley with precision.<br><br>
-&bull; Testing: After installation, we test the dryer to ensure proper functionality and quiet operation.
+      <div class="two-col-grid">
+        <div class="col-one">
+          <img
+            class="img-header"
+            src="/images/lg-dryer-repair.webp"
+            width="500"
+            height="500"
+            alt="Dryer Idler Pulley Replacement Cost"
+          />
 
-<h2>Factors Affecting Dryer Idler Pulley Replacement Cost</h2>
-<p>&bull; Dryer Model: Different dryer models may require specific idler pulleys, affecting the cost.<br><br>
-&bull; Brand and Quality of Parts: We use reliable, high-quality replacement parts for long-lasting performance.<br><br>
-&bull; Labor Costs: The complexity of the replacement process and labor hours required can influence the overall cost.<br><br>
-&bull; Additional Repairs: If other components need attention or if maintenance tasks are required, they may affect the total cost.</p>
+          <Contactbtn />
+        </div>
 
-<h2>Why Choose Us for Dryer Idler Pulley Replacement?</h2>
-<p>&bull; Expertise: Our technicians have extensive experience in dryer repairs and idler pulley replacements.<br><br>
-&bull; Quality Parts: We source genuine, manufacturer-approved idler pulleys to ensure compatibility and durability.<br><br>
-&bull; Affordable Pricing: We offer competitive and transparent pricing, with no hidden fees or surprises.<br><br>
-&bull; Customer Satisfaction: Your satisfaction is our priority, and we strive to provide efficient, reliable service.</p>
+        <div class="col-two">
+          <p>
+            Welcome to our dedicated page for dryer idler pulley replacement
+            cost, where we prioritize the smooth and efficient functioning of
+            your dryer. The idler pulley plays a crucial role in maintaining
+            proper tension on the dryer belt, ensuring smooth rotation of the
+            drum. Over time, this component can wear out, leading to noise,
+            vibration, or even dryer malfunctions. Trust our expert technicians
+            to replace your dryer's idler pulley promptly and affordably.
+          </p>
+          <h2>Dryer Idler Pulley Replacement Cost</h2>
+          <p>
+            The dryer idler pulley replacement cost is $220, excluding parts.
+            Initially, technicians will diagnose the specific issue for the
+            service fee of $65. During this visit, he will detail the problem
+            and provide a breakdown of costs. If you opt for the repair, the
+            service fee is waived, and you only pay for the repair itself.
+          </p>
+        </div>
+      </div>
+      <h2>Signs Your Dryer Idler Pulley Needs Replacement</h2>
+      <p>
+        &bull; Squeaking or Grinding Noises: Unusual sounds during dryer
+        operation often indicate a worn-out idler pulley.<br /><br />
+        &bull; Excessive Drum Movement: If you notice excessive movement or wobbling
+        of the dryer drum, the idler pulley may be at fault.<br /><br />
+        &bull; Belt Slippage: A loose or slipping dryer belt is a common symptom
+        of an idler pulley that needs replacement.
+      </p>
 
-<h2>Contact Us for a Quote</h2>
-<p>Don't let a faulty idler pulley disrupt your dryer's performance. Contact us today for a personalized quote for idler pulley replacement. Our friendly team is ready to assist you and schedule a convenient service appointment. Trust us to restore your dryer to smooth and quiet operation with professional idler pulley replacement services.</p>
+      <h2>Our Replacement Process</h2>
+      <p>
+        &bull; Diagnosis: Our experienced technicians will inspect your dryer to
+        identify the faulty idler pulley.<br /><br />
+        &bull; Cost Estimate: We provide a transparent cost estimate for the replacement
+        service, including parts and labor.<br /><br />
+        &bull; Professional Replacement: Using high-quality replacement parts, we
+        install a new idler pulley with precision.<br /><br />
+        &bull; Testing: After installation, we test the dryer to ensure proper functionality
+        and quiet operation.
 
-      <Cta />
-    </Container>
-    </Layout>
-    
+        <h2>Factors Affecting Dryer Idler Pulley Replacement Cost</h2>
+        <p>
+          &bull; Dryer Model: Different dryer models may require specific idler
+          pulleys, affecting the cost.<br /><br />
+          &bull; Brand and Quality of Parts: We use reliable, high-quality replacement
+          parts for long-lasting performance.<br /><br />
+          &bull; Labor Costs: The complexity of the replacement process and labor
+          hours required can influence the overall cost.<br /><br />
+          &bull; Additional Repairs: If other components need attention or if maintenance
+          tasks are required, they may affect the total cost.
+        </p>
+
+        <h2>Why Choose Us for Dryer Idler Pulley Replacement?</h2>
+        <p>
+          &bull; Expertise: Our technicians have extensive experience in dryer
+          repairs and idler pulley replacements.<br /><br />
+          &bull; Quality Parts: We source genuine, manufacturer-approved idler pulleys
+          to ensure compatibility and durability.<br /><br />
+          &bull; Affordable Pricing: We offer competitive and transparent pricing,
+          with no hidden fees or surprises.<br /><br />
+          &bull; Customer Satisfaction: Your satisfaction is our priority, and we
+          strive to provide efficient, reliable service.
+        </p>
+
+        <h2>Contact Us for a Quote</h2>
+        <p>
+          Don't let a faulty idler pulley disrupt your dryer's performance.
+          Contact us today for a personalized quote for idler pulley
+          replacement. Our friendly team is ready to assist you and schedule a
+          convenient service appointment. Trust us to restore your dryer to
+          smooth and quiet operation with professional idler pulley replacement
+          services.
+        </p>
+
+        <Cta />
+      </p>
+    </main>
+  </Container></Layout
+>
