--- a/src/pages/services/oven-repair.astro
+++ b/src/pages/services/oven-repair.astro
@@ -6,22 +6,140 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
-
+import Navbar from "@components/navbar/navbar.astro";
 ---
-<Layout title="Same Day Oven Repair">
-<Container>
-    <main>
-        <h1><span class="animate-charcter">Same Day Oven Repair</span> in Los Angeles and Surrounding Areas</h1>
-     
-     <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/same-day-oven-repair-los-angeles-and-surrounding-areas.webp" width="500" height="500" alt="Oven Repair Services Los Angeles - technician repairing an oven">   
-     <Contactbtn />
-     </div>
-     
-     <div class="col-two">
-        <p style="text-align: start">When your oven fails to heat up or experiences any malfunction, it disrupts your daily routine and meal preparation. That's where Same Day Appliance Repair offers professional and quick oven repair and range repair services in Los Angeles. Our team ensures your oven is back in working order with minimal downtime. Contact us today to schedule a same-day repair service and get your kitchen running smoothly again.</p><p style="text-align: start">Our alliance repair services team is built of highly skilled technicians dedicated to staying abreast of the latest appliance technology. Our commitment to excellence is reflected in our service guarantees, including up to a 3-month warranty on parts and labor. We strive to offer the best value through competitive pricing without compromising quality.</p><p style="text-align: start">Our diagnostic process often reveals that many oven issues can be resolved through straightforward repairs, such as replacing heating elements or fixing door seals. However, our certified repair professionals are equipped to handle more complex problems efficiently. We service various oven brands, including Samsung, LG, GE, Thermador, Whirlpool, Frigidaire, and more, ensuring that our team is prepared to provide a solution no matter the issue. Call our appliance repair services to find out more.</p>
-      </div></div>
-   <h2><strong>Why Choose Our Oven Repair Services in Los Angeles, CA</strong></h2><h3><strong>Prompt Same-Day Oven Repair</strong></h3><p>Our commitment to Los Angeles residents includes providing same-day appliance repair services. We understand the inconvenience of a malfunctioning oven, whether in a home or a commercial setting, and we aim to resolve issues swiftly, often completing repairs on our first visit.</p><h3><strong>Affordable Diagnostic Service Fee</strong></h3><p>We offer a low diagnostic service fee, which we happily waive if you decide to proceed with the repair, making our services even more accessible.</p><h3><strong>Experienced Oven Repair Technicians</strong></h3><p>Our technicians are certified and deeply understand various oven and appliance repair issues, allowing them to diagnose and repair problems quickly and efficiently. Whether you're dealing with a residential or commercial oven, our team is renowned for providing timely and cost-effective appliance repair services.</p><h3><strong>Residential Oven Repair Services in Los Angeles, CA</strong></h3><p style="text-align: start">Choosing our oven repair service in Los Angeles ensures numerous benefits for homeowners. These include access to expert technicians, rapid service, competitive pricing, authentic replacement parts, comprehensive warranties, and a satisfaction guarantee. We prioritize your convenience and satisfaction, ensuring a smooth and efficient repair process.</p><h2><strong>Commercial Oven Repair Services in Los Angeles, CA</strong></h2><p style="text-align: start">For businesses relying on commercial ovens, such as restaurants and bakeries, we offer specialized repair services to address the unique needs of these high-demand appliances. Our certified technicians are adept at handling the complexities of commercial oven repairs, ensuring fast, reliable, and cost-effective solutions to minimize downtime and keep your operations running smoothly.</p><h2><strong>Frequently Asked Questions</strong></h2><h3><strong>Common Oven Repair Issues</strong></h3><p>Typical problems include the oven not heating, uneven baking, the oven door not closing properly, the self-cleaning function not working, and issues with the control panel. Our team can address these and other concerns efficiently.</p><h3><strong>Signs You Need Professional Oven Repair</strong></h3><p> If you notice your oven not reaching the set temperature, producing unevenly cooked food, making unusual noises, or the door not sealing correctly, it's time to seek professional repair services.</p><h3><strong>Repair or Replace Your Oven?</strong> </h3><p>Consider repairing your oven if it's relatively new, the repair cost is less than half the price of a new oven, and it has been reliable. Replacement might be more cost-effective if the oven is old, frequently needs repairs, or the repair cost is high relative to a new oven's price.</p><h3><strong>Brands of Ovens We Repair</strong></h3><p>We repair a broad spectrum of oven brands, ensuring that regardless of your appliance's manufacturer, our technicians have the expertise to fix it.</p><h3><strong>Same-Day Oven Repair in Los Angeles</strong> </h3><p>Yes, we specialize in providing same-day oven repair services to address your needs quickly and efficiently.</p><h3><strong>Oven Repair Costs:</strong> </h3><p>The oven repair cost varies depending on the issue, required parts, and oven model. We offer competitive pricing and transparent estimates to ensure you make an informed decision.</p><h3><strong>Warranty on Oven Repair Services</strong></h3><p>Our oven repair and range repair services come with a solid warranty, including a 30-day warranty on labor and up to a 3-month warranty on parts, emphasizing our commitment to quality and customer satisfaction. </p><h3><strong>Preventative Maintenance for Ovens</strong></h3><p>Yes, we offer preventative maintenance services to extend the lifespan of your oven and ensure it operates efficiently, including inspections, cleaning, and part replacements as needed.</p><h3><strong>Repair Service Duration</strong></h3><p>The time required for an oven repair service can vary, but we aim for swift and practical solutions, often providing same-day service to minimize any inconvenience.</p><p style="text-align: start">By addressing these FAQs, we aim to provide comprehensive information about our oven repair services in Los Angeles, ensuring you understand the benefits and scope of choosing us for your appliance repair needs.</p>
-<Cta />
-</Container>
-</Layout>
 
+<Navbar />
+<Layout title="Same Day Oven Repair">
+  <Container>
+    <main>
+      <h1>
+        <span class="animate-charcter">Same Day Oven Repair</span> in Los Angeles
+        and Surrounding Areas
+      </h1>
+
+      <div class="two-col-grid">
+        <div class="col-one">
+          <img
+            class="img-header"
+            src="/images/same-day-oven-repair-los-angeles-and-surrounding-areas.webp"
+            width="500"
+            height="500"
+            alt="Oven Repair Services Los Angeles - technician repairing an oven"
+          />
+          <Contactbtn />
+        </div>
+
+        <div class="col-two">
+          <p style="text-align: start">
+            When your oven fails to heat up or experiences any malfunction, it
+            disrupts your daily routine and meal preparation. That's where Same
+            Day Appliance Repair offers professional and quick oven repair and
+            range repair services in Los Angeles. Our team ensures your oven is
+            back in working order with minimal downtime. Contact us today to
+            schedule a same-day repair service and get your kitchen running
+            smoothly again.
+          </p><p style="text-align: start">
+            Our alliance repair services team is built of highly skilled
+            technicians dedicated to staying abreast of the latest appliance
+            technology. Our commitment to excellence is reflected in our service
+            guarantees, including up to a 3-month warranty on parts and labor.
+            We strive to offer the best value through competitive pricing
+            without compromising quality.
+          </p><p style="text-align: start">
+            Our diagnostic process often reveals that many oven issues can be
+            resolved through straightforward repairs, such as replacing heating
+            elements or fixing door seals. However, our certified repair
+            professionals are equipped to handle more complex problems
+            efficiently. We service various oven brands, including Samsung, LG,
+            GE, Thermador, Whirlpool, Frigidaire, and more, ensuring that our
+            team is prepared to provide a solution no matter the issue. Call our
+            appliance repair services to find out more.
+          </p>
+        </div>
+      </div>
+      <h2>
+        <strong>Why Choose Our Oven Repair Services in Los Angeles, CA</strong>
+      </h2><h3><strong>Prompt Same-Day Oven Repair</strong></h3><p>
+        Our commitment to Los Angeles residents includes providing same-day
+        appliance repair services. We understand the inconvenience of a
+        malfunctioning oven, whether in a home or a commercial setting, and we
+        aim to resolve issues swiftly, often completing repairs on our first
+        visit.
+      </p><h3><strong>Affordable Diagnostic Service Fee</strong></h3><p>
+        We offer a low diagnostic service fee, which we happily waive if you
+        decide to proceed with the repair, making our services even more
+        accessible.
+      </p><h3><strong>Experienced Oven Repair Technicians</strong></h3><p>
+        Our technicians are certified and deeply understand various oven and
+        appliance repair issues, allowing them to diagnose and repair problems
+        quickly and efficiently. Whether you're dealing with a residential or
+        commercial oven, our team is renowned for providing timely and
+        cost-effective appliance repair services.
+      </p><h3>
+        <strong>Residential Oven Repair Services in Los Angeles, CA</strong>
+      </h3><p style="text-align: start">
+        Choosing our oven repair service in Los Angeles ensures numerous
+        benefits for homeowners. These include access to expert technicians,
+        rapid service, competitive pricing, authentic replacement parts,
+        comprehensive warranties, and a satisfaction guarantee. We prioritize
+        your convenience and satisfaction, ensuring a smooth and efficient
+        repair process.
+      </p><h2>
+        <strong>Commercial Oven Repair Services in Los Angeles, CA</strong>
+      </h2><p style="text-align: start">
+        For businesses relying on commercial ovens, such as restaurants and
+        bakeries, we offer specialized repair services to address the unique
+        needs of these high-demand appliances. Our certified technicians are
+        adept at handling the complexities of commercial oven repairs, ensuring
+        fast, reliable, and cost-effective solutions to minimize downtime and
+        keep your operations running smoothly.
+      </p><h2><strong>Frequently Asked Questions</strong></h2><h3>
+        <strong>Common Oven Repair Issues</strong>
+      </h3><p>
+        Typical problems include the oven not heating, uneven baking, the oven
+        door not closing properly, the self-cleaning function not working, and
+        issues with the control panel. Our team can address these and other
+        concerns efficiently.
+      </p><h3><strong>Signs You Need Professional Oven Repair</strong></h3><p>
+        If you notice your oven not reaching the set temperature, producing
+        unevenly cooked food, making unusual noises, or the door not sealing
+        correctly, it's time to seek professional repair services.
+      </p><h3><strong>Repair or Replace Your Oven?</strong></h3><p>
+        Consider repairing your oven if it's relatively new, the repair cost is
+        less than half the price of a new oven, and it has been reliable.
+        Replacement might be more cost-effective if the oven is old, frequently
+        needs repairs, or the repair cost is high relative to a new oven's
+        price.
+      </p><h3><strong>Brands of Ovens We Repair</strong></h3><p>
+        We repair a broad spectrum of oven brands, ensuring that regardless of
+        your appliance's manufacturer, our technicians have the expertise to fix
+        it.
+      </p><h3><strong>Same-Day Oven Repair in Los Angeles</strong></h3><p>
+        Yes, we specialize in providing same-day oven repair services to address
+        your needs quickly and efficiently.
+      </p><h3><strong>Oven Repair Costs:</strong></h3><p>
+        The oven repair cost varies depending on the issue, required parts, and
+        oven model. We offer competitive pricing and transparent estimates to
+        ensure you make an informed decision.
+      </p><h3><strong>Warranty on Oven Repair Services</strong></h3><p>
+        Our oven repair and range repair services come with a solid warranty,
+        including a 30-day warranty on labor and up to a 3-month warranty on
+        parts, emphasizing our commitment to quality and customer satisfaction.
+      </p><h3><strong>Preventative Maintenance for Ovens</strong></h3><p>
+        Yes, we offer preventative maintenance services to extend the lifespan
+        of your oven and ensure it operates efficiently, including inspections,
+        cleaning, and part replacements as needed.
+      </p><h3><strong>Repair Service Duration</strong></h3><p>
+        The time required for an oven repair service can vary, but we aim for
+        swift and practical solutions, often providing same-day service to
+        minimize any inconvenience.
+      </p><p style="text-align: start">
+        By addressing these FAQs, we aim to provide comprehensive information
+        about our oven repair services in Los Angeles, ensuring you understand
+        the benefits and scope of choosing us for your appliance repair needs.
+      </p>
+      <Cta />
+    </main>
+  </Container>
+</Layout>
